# web_scrape

./: .gitignore  Dockerfile  README  README.md  docker-compose.yml  main.py  pep_pedia_batch.csv  pyproject.toml  test.py  test_ex.py  verify_refactor.py
output/: data_summary.py  pep_pedia_master.csv  summary_report.csv
src/: config.py  crawl_url.py  csv_save.py  data_summary.py  multi_page_scrape.py  multi_scrape.py  read_data.py  sections.py  single_page_scrape.py
src/core/: interfaces.py  models.py
src/extractors/: base.py  community.py  hero.py  quick_guide.py  section.py
src/infrastructure/: csv_storage.py  webdriver_factory.py
src/services/: page_scraper.py  scraper_manager.py
