[project]
name = "web-scraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair==4.2.2",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "selenium>=4.40.0",
    "streamlit>=1.19.0",
    "webdriver-manager>=4.0.2",
]
